//
//
//
syntax = "proto3";

option csharp_namespace = "Axiverse.Services.Proto";

service ChatService {

    rpc JoinChannel(JoinChannelRequest) returns (JoinChannelResponse);

	rpc LeaveChannel(LeaveChannelRequest) returns (LeaveChannelResponse);

    rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);

    rpc Listen(ListenRequest) returns (stream ListenResponse);

}

message JoinChannelRequest {
    string session_token = 1;    
	string channel = 2;
}

message JoinChannelResponse {

}

message LeaveChannelRequest {
    string session_token = 1;    
	string channel = 2;
}

message LeaveChannelResponse {

}

message SendMessageRequest {
    string session_token = 1;
    string channel = 2;
    string message = 3;
}

message SendMessageResponse {
    uint64 message_id = 1;
}


message ChatMessage {
    string channel = 1;
    string message = 2;
    uint64 message_id = 3;
}

message ChatNotification {
    enum NotificationType {
        UNKNOWN = 0;
        MessageDelivered = 100;
        MessageRead = 101;

        UserOnline = 200;
        UserOffline = 201;
    }

    string channel = 1;
    uint64 message_id = 2;

}

message ListenRequest {
    string session_token = 3;
}

message ListenResponse {
    oneof event {
        ChatMessage message = 1;
        ChatNotification notification = 2;
    }
}